# SPOT-Planner

./: README.md  environment.yml  pyproject.toml
gym_pybullet_drones/assets/: cf2p.urdf  cf2x.urdf  mantis.urdf  red_cylinder.urdf  red_cylinder_0.2.urdf  red_cylinder_0.8.urdf  torus.urdf
gym_pybullet_drones/control/: DSLPIDControl.py  DSLPIDControl_bkup.py
gym_pybullet_drones/envs/: BaseAviary.py  VisionAviary.py
gym_pybullet_drones/envs/obstacle_pos/: environment_1.csv  environment_10.csv  environment_11.csv  environment_12.csv  environment_13.csv  environment_14.csv  environment_15.csv  environment_16.csv  environment_17.csv  environment_18.csv  environment_19.csv  environment_2.csv  environment_20.csv  environment_21.csv  environment_22.csv  environment_23.csv  environment_24.csv  environment_25.csv  environment_26.csv  environment_27.csv  environment_28.csv  environment_29.csv  environment_3.csv  environment_30.csv  environment_31.csv  environment_32.csv  environment_33.csv  environment_34.csv  environment_35.csv  environment_36.csv  environment_37.csv  environment_38.csv  environment_39.csv  environment_4.csv  environment_40.csv  environment_41.csv  environment_42.csv  environment_43.csv  environment_44.csv  environment_45.csv  (+20 more)
gym_pybullet_drones/examples/: compare.py  downwash.py  fly.py  fly_im.py  fly_occupancy.py  fly_occupancy_nonvisible.py  groundeffect.py  velocity.py
gym_pybullet_drones/utils/: enums.py
ros2/src/custom_interface_gym/: CMakeLists.txt  package.xml
ros2/src/custom_interface_gym/msg/: BoundingBoxArray.msg  DesTrajectory.msg  DynamicBbox.msg  DynamicPointCloud.msg  PcdArray.msg  ServerState.msg
ros2/src/rog_map/: CMakeLists.txt
ros2/src/rog_map/config/: rog_map.yaml
ros2/src/rog_map/include/rog_map/rog_map_core/: config.hpp
ros2/src/rog_map/include/rog_map_ros/: rog_map_ros2.hpp
ros2/src/rog_map/src/rog_map_ros/: rog_map_ros2.cpp
ros2/src/ros2_gym_pybullet_drones/: setup.py
ros2/src/ros2_gym_pybullet_drones/ros2_gym_pybullet_drones/: benchmark_TOAST.py  benchmark_super.py  lidar_sim.py  model_publisher.py  noise_gen.py  pcd_to_csv.py  torus_gen.py  trajectory_eg.py  vision_trajectory_tracker.py
ros2/src/ros2_gym_pybullet_drones/rviz/: rrt2.rviz
ros2/src/rrt_path_finder/: CMakeLists.txt  px4_cmake
ros2/src/rrt_path_finder/data_structure/base/: ellipsoid.h
ros2/src/rrt_path_finder/include/rrt_path_finder/: ciri.h  ciri_ellip.h  corridor_finder.h  corridor_finder_dynamic.h  corridor_finder_ellip.h  custom_hash.hpp  datatype_dynamic.h  datatype_shared.h  gcopter.hpp  gcopter_dynamic.hpp  gcopter_fixed.hpp  kdtree_dynamic.h  lbfgs.hpp  non_uniform_bspline.hpp  yaw_optimization.hpp
ros2/src/rrt_path_finder/src/: AABB_dis.py  ciri.cpp  ciri_ellip.cpp  corridor_finder.cpp  corridor_finder_dynamic.cpp  corridor_finder_ellip.cpp  dynamic_ob.cpp  kdtree_dynamic.c  non_uniform_bspline.cpp  pcd_gen.cpp  pcd_manipulation.cpp  pcd_manipulation_px4.cpp  pcd_segmentation.cpp  pointcloud_transformer  pointcloud_transformer.cpp  pointcloud_transformer_dds.cpp  polygon_intersection.py  rrt_dynamic.cpp  rrt_node.cpp  rrt_node_firi.cpp  rrt_node_new_replan.cpp  rrt_node_new_replan_normal.cpp  rrt_node_new_replan_normal_yaw.cpp  rrt_node_px4.cpp  rrt_node_px4_yaw.cpp  rrt_node_safe_replan.cpp  trajectory_server.cpp  trajectory_server_mavros.cpp  trajectory_server_px4.cpp  trajectory_server_px4_yaw.cpp  trajectory_server_yaw.cpp  waypoint.py
ros2/src/rrt_path_finder/src/utils/: ellipsoid.cpp
ros2/src/super_planner/: CMakeLists.txt
ros2/src/super_planner/config/: click.yaml
ros2/src/super_planner/include/ros_interface/ros2/: fsm_ros2.hpp
